@@ -67,6 +67,8 @@ Bugfixes:
  * Issue #22: corrected memory leaks occurring on KeyboardInterrupt/SIGTERM.
  * Issue #23: PASS wasn't rejected when user was already authenticated.
  * Issue #24: can't use os.strerror() on pythonCE.
+ * Issue #24: problem occuring on windows when using '\\' as user's home
+   directory.
  * Issue #26: used select() by default instead of poll() because of an asyncore
    module's defect.
  * Issue #33: some FTPHandler class attributes wasn't resetted on REIN.
